[package]
name = "rust_wasapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
hound = "3.5.0"
log = "0.4.17"
portaudio = "0.7.0"
simplelog = "0.12.1"
time = "0.3.20"
wasapi = "0.12.0"
wav = "1.0.0"
